--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>spring-context</artifactId>
       <version>5.2.5.RELEASE</version>
     </dependency>
+      <dependency>
+          <groupId>org.jberet.test-apps</groupId>
+          <artifactId>postConstruct</artifactId>
+          <version>1.0.0.CR1</version>
+      </dependency>
 
   </dependencies>
 
